# anticipator

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  anticipator_report.json  pyproject.toml
anticipator/: __init__.py  cli.py
anticipator/detection/: __init__.py  aho.py  canary.py  entropy.py  heuristic.py  normalizer.py  scanner.py  signatures.py
anticipator/detection/core/: __init__.py  aho.py  entropy.py  heuristic.py
anticipator/detection/extended/: __init__.py  config_drift.py  homoglyph.py  path_traversal.py  threat_categories.py  tool_alias.py
anticipator/integrations/: __init__.py  exporter.py  monitor.py  visualizer.py
anticipator/integrations/crewai/: __init__.py  interceptor.py  wrapper.py
anticipator/integrations/langgraph/: __init__.py  interceptor.py  wrapper.py
anticipator_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: cli.py
cli/python-cli/src/: cli.py  scanner.py
cli/src/: cli.py
python-sdk/src/anticipator/detection/: aho.py  build_index.py  canary.py  detector.py  embed_model.py  encoding.py  entropy.py  heuristic.py  normalizer.py  observer.py  signatures.py
reports/: report.json  report.jsoncls
sdk/integrations/crewai/: __init__.py  example.py  interceptor.py  wrapper.py
sdk/integrations/langgraph/: __init__.py  anticipator.db  anticipator_graph.html  anticipator_report.json  example.py  exporter.py  interceptor.py  monitor.py  visualizer.py  wrapper.py
